[project]
name = "proxyml-core"
version = "0.1.0"
description = "Shared schema types, export contract, and modeling code for proxyml and its backend."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
modeling = [
    "scikit-learn>=1.4",
    "scipy>=1.10",
]
dev = [
    "pytest",
    "ruff",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
