[project]
name = "proxyml-core"
version = "0.1.0"
description = "Shared schema types, export contract, and modeling code for proxyml and its backend."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "ProxyML", email = "contact@proxyml.ai"}
]
keywords = ["machine learning", "surrogate models", "explainability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
modeling = [
    "scikit-learn>=1.4",
    "scipy>=1.10",
]
dev = [
    "pytest",
    "ruff",
]

[project.urls]
Homepage = "https://proxyml.ai"
Repository = "https://github.com/proxyml/proxyml-core"
"Bug Tracker" = "https://github.com/proxyml/proxyml-core/issues"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
